--- a/package-vercel.json
+++ b/package-vercel.json
@@ -1,12 +1,12 @@
 {
   "name": "tuyishime-martin-portfolio",
-  "version": "2.2.0",
+  "version": "2.1.0",
   "description": "Professional portfolio website for Tuyishime Martin - Web Developer & AI/ML Engineer",
-  "main": "server.js",
+  "main": "vercel-server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "vercel-build": "echo 'No build script needed'",
+    "start": "node vercel-server.js",
+    "vercel": "node vercel-server.js",
+    "dev": "nodemon vercel-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -21,8 +21,6 @@
   "author": "Tuyishime Martin",
   "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "engines": {
