--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/(.+\\.(css|js|png|jpg|jpeg|gif|svg|ico|webp))$",
+      "dest": "/$1"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "vercel-server.js"
     },
